@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-2022, windows-2025]
-        qt_ver: [6.9.1]
+        qt_ver: [6.10.0]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
