@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      QT_VERSION: 6.9.1
+      QT_VERSION: 6.10.0
       UBSAN_OPTIONS: print_stacktrace=1:halt_on_error=1:report_error_type=1
       # TODO: figure out why there are cache misses with PCH enabled
       CCACHE_SLOPPINESS: pch_defines,time_macros
